# finance

./: Cargo.toml
data/: all_stocks.csv  stocks.csv
src/: api_client.rs  main.rs
